@@ -1,2 +1,2 @@
 #
-__version__ = '2.3.2.dev4'
+__version__ = '2.3.2.dev5'
