@@ -1,6 +1,6 @@
 [tox]
 distshare={homedir}/.tox/distshare
-envlist=py26,py27,py31,py32,py33,py27-xdist,py25,trial
+envlist=py26,py27,py27-nobyte,py31,py32,py33,py27-xdist,py25,trial
 indexserver=
     pypi = http://pypi.python.org/simple
     testrun = http://pypi.testrun.org
@@ -24,7 +24,17 @@ basepython=python2.7
 deps=pytest-xdist
 commands=
   py.test -n3 -rfsxX \
-        --ignore .tox --junitxml={envlogdir}/junit-{envname}.xml testing
+        --junitxml={envlogdir}/junit-{envname}.xml testing
+
+[testenv:py27-nobyte]
+changedir=.
+basepython=python2.7
+deps=pytest-xdist
+setenv=
+    PYTHONDONTWRITEBYTECODE=1
+commands=
+  py.test -n3 -rfsxX \
+        --junitxml={envlogdir}/junit-{envname}.xml []
 
 [testenv:trial]
 changedir=.
